tests/ui/ergonomic-clones/closure/immutable-outer-variable.stderr
error[E0594]: cannot assign to `y`, as it is not declared as mutable
  --> $DIR/immutable-outer-variable.rs:14:25
   |
LL |     foo(Box::new(use || y = !y) as Box<_>);
   |                         ^^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut y = true;
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
